--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,19 @@ hr {
 }
 
 #headContainer {
-    background-image: url("images/tahoe.jpg");
-    background-position: center;
-    background-size: cover;
+    background: linear-gradient(-45deg, #00ffaa, #00bb66, #0066bb, #00aaff);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
