--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ hr {
 #headContainer {
     background: linear-gradient(-45deg, #00ffaa, #00bb66, #0066bb, #003366);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 10s ease infinite;
 }
 
 @keyframes gradient {
@@ -44,4 +44,27 @@ hr {
     color: #00bb66;
     background-color: #fff;
     border-color: #00bb66;
+}
+
+/* for linkedin + github icons */
+.noul:hover {
+    text-decoration: none;
+}
+
+#pton-icon {
+    width: 1em;
+}
+
+.a-custom-g {
+    color: #00bb66;
+}
+
+.a-custom-g:hover {
+    color: #00bb66;
+}
+
+#footer {
+    padding: 50px;
+    margin: 0px;
+    background-color: #0066bb;
 }
